<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/connect_scan"
        android:icon="@drawable/ic_action_device_access_bluetooth_searching"
        app:showAsAction="ifRoom"
        android:title="@string/connect"/>

    <item
        android:id="@+id/download_data"
        app:showAsAction="never"
        android:title="@string/download_data"/>

    <item
        android:id="@+id/update_data"
        app:showAsAction="never"
        android:title="@string/update_data"/>

    <item
        android:id="@+id/db_util"
        app:showAsAction="never"
        android:title="@string/db_util"/>

    <item
        android:id="@+id/settings"
        app:showAsAction="never"
        android:title="@string/settings"/>

</menu>
